fix(style): refine field label styles and alignment

--- a/packages/veui-theme-dls/components/field.less
+++ b/packages/veui-theme-dls/components/field.less
@@ -6,24 +6,20 @@
 .@{veui-prefix}-field {
   position: relative;
   display: flex;
-  align-items: stretch;
-  font-size: @dls-font-size-1;
-  min-height: @dls-height-m;
+  align-self: stretch;
 
   --dls-field-label-width: @dls-form-label-width;
 
   &-label {
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+    justify-content: flex-end;
     position: relative;
     flex: none;
-    width: @dls-form-label-width;
     width: var(--dls-field-label-width, @dls-form-label-width);
     margin-right: @dls-form-label-spacing-after-horizontal;
     color: @dls-form-label-font-color;
-    text-align: right;
-
-    .@{veui-prefix}-label {
-      line-height: @dls-height-m;
-    }
   }
 
   &-required > &-label::before {
@@ -84,11 +80,12 @@
     font-size: @font-size;
     min-height: @min-height;
 
-    .@{veui-prefix}-form-label {
-      line-height: @min-height;
+    .@{veui-prefix}-field-label {
+      height: @min-height;
     }
-    .@{veui-prefix}-form-tip {
-      top: ~"calc(@{min-height} / 2)";
+
+    .@{veui-prefix}-label {
+      line-height: dls-even(dls-line-height(@dls-line-height-1, @font-size));
     }
   }
 
